[gd_scene load_steps=9 format=3 uid="uid://be13dj8aot2a1"]

[ext_resource type="Script" uid="uid://cf08m1qkbi2j6" path="res://scripts/Game.gd" id="1_kiw3p"]
[ext_resource type="Script" uid="uid://b7wuc3lebbhcu" path="res://scripts/Necromancer.gd" id="2_400sg"]
[ext_resource type="Script" uid="uid://b8nohsrbqqgad" path="res://scripts/GameManager.gd" id="2_g4kob"]
[ext_resource type="Script" uid="uid://cp7weqwxc8i8v" path="res://scripts/BattleGrid.gd" id="3_g4kob"]
[ext_resource type="Texture2D" uid="uid://bsynm4hmyov58" path="res://assets/images/bg.png" id="4_qy1jj"]
[ext_resource type="Texture2D" uid="uid://cpd11cj1a3247" path="res://assets/images/spells.png" id="5_3xj3m"]
[ext_resource type="Texture2D" uid="uid://df3e7j2y7q6dj" path="res://assets/images/help.png" id="6_mcffj"]
[ext_resource type="Theme" uid="uid://bcbm7eax7il1n" path="res://resources/DefaultTheme.tres" id="7_2rd6h"]

[node name="Game" type="Node2D"]
script = ExtResource("1_kiw3p")

[node name="BG" type="CanvasLayer" parent="."]
layer = -1

[node name="BackGround" type="TextureRect" parent="BG"]
offset_left = -8.0
offset_right = 1528.0
offset_bottom = 1024.0
texture = ExtResource("4_qy1jj")

[node name="Spells" type="TextureRect" parent="BG"]
offset_left = -1728.0
offset_top = -24.0
offset_right = -192.0
offset_bottom = 1000.0
texture = ExtResource("5_3xj3m")

[node name="Help" type="TextureRect" parent="BG"]
offset_left = 1640.0
offset_top = 16.0
offset_right = 3176.0
offset_bottom = 1040.0
texture = ExtResource("6_mcffj")

[node name="GameManagerNode" type="Node" parent="."]
script = ExtResource("2_g4kob")

[node name="NecromancerNode" type="Node" parent="."]
script = ExtResource("2_400sg")

[node name="BattleGridNode" type="Node2D" parent="."]
position = Vector2(256, 192)
script = ExtResource("3_g4kob")

[node name="UnitsContainerNode" type="Node2D" parent="."]
position = Vector2(256, 192)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Level" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 45.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"HeaderLarge"
text = "1"
metadata/_edit_use_anchors_ = true

[node name="DarkEnergy" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 80.0
offset_right = 56.0
offset_bottom = 109.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"HeaderLarge"
text = "2"
metadata/_edit_use_anchors_ = true

[node name="MaxDarkEnergy" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 144.0
offset_right = 56.0
offset_bottom = 173.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"HeaderLarge"
text = "3"
metadata/_edit_use_anchors_ = true

[node name="MasteryPoints" type="Label" parent="UI"]
offset_left = 464.0
offset_top = 16.0
offset_right = 504.0
offset_bottom = 45.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"HeaderLarge"
text = "4"

[node name="LevelUp" type="Button" parent="UI"]
offset_left = 80.0
offset_top = 16.0
offset_right = 300.0
offset_bottom = 56.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"FlatButton"
text = "LEVEL UP"

[node name="Reanimate" type="Button" parent="UI"]
offset_left = 80.0
offset_top = 80.0
offset_right = 340.0
offset_bottom = 120.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"FlatButton"
text = "REANIMATE
"

[node name="ReanimateType" type="Button" parent="UI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -496.0
offset_right = -12.0
offset_bottom = -456.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("7_2rd6h")
theme_type_variation = &"FlatButton"
text = "REANIMATE TYPE
"

[node name="SoulDrain" type="Button" parent="UI"]
offset_left = 80.0
offset_top = 144.0
offset_right = 348.0
offset_bottom = 184.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"FlatButton"
text = "SOUL DRAIN"

[node name="ReanimateUpgrade" type="Button" parent="UI"]
offset_left = 1136.0
offset_top = 80.0
offset_right = 1356.0
offset_bottom = 120.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"FlatButton"
text = "LEVEL UP"

[node name="SoulDrainUpgrade" type="Button" parent="UI"]
offset_left = 1136.0
offset_top = 144.0
offset_right = 1356.0
offset_bottom = 184.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"FlatButton"
text = "LEVEL UP"

[node name="GameStartButton" type="Button" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 448.0
offset_right = 144.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_2rd6h")
theme_type_variation = &"FlatButton"
text = "START"

[node name="Log" type="Label" parent="UI"]
offset_top = 256.0
offset_right = 1536.0
offset_bottom = 800.0

[node name="GameOver" type="Panel" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -156.0
offset_top = -128.0
offset_right = 156.0
grow_horizontal = 2
grow_vertical = 0

[node name="Status" type="Label" parent="UI/GameOver"]
layout_mode = 0
offset_left = 116.0
offset_top = 48.0
offset_right = 196.0
offset_bottom = 71.0

[node name="Restart" type="Button" parent="UI/GameOver"]
layout_mode = 0
offset_left = 116.0
offset_top = 96.0
offset_right = 196.0
offset_bottom = 112.0
text = "RESTART"

[node name="HumanPopulationLabel" type="Label" parent="UI"]
offset_left = 464.0
offset_top = 80.0
offset_right = 504.0
offset_bottom = 109.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"HeaderLarge"
text = "5"

[node name="TurnWaveLabel" type="Label" parent="UI"]
offset_left = 464.0
offset_top = 144.0
offset_right = 504.0
offset_bottom = 173.0
theme = ExtResource("7_2rd6h")
theme_type_variation = &"HeaderLarge"
text = "6"
